[gd_scene load_steps=11 format=3 uid="uid://gdsehiejhkiv"]

[ext_resource type="Script" path="res://Scripts/Levels/menu.gd" id="1_e646e"]
[ext_resource type="Texture2D" uid="uid://c41v44i4wsy43" path="res://Assets/Backgrounds/Background.png" id="1_f684u"]
[ext_resource type="FontFile" uid="uid://8p8a86wkjymu" path="res://Assets/Fonts/DMSerifText-Regular.ttf" id="2_u1yjf"]
[ext_resource type="FontFile" uid="uid://dwc4bl618qiyw" path="res://Assets/Fonts/pixleFont.ttf" id="3_1bycy"]

[sub_resource type="Animation" id="Animation_v4w5m"]
resource_name = "ControlScreen"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Controls Screen:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Exit:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Exit:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_ha3ff"]
resource_name = "HideAll"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Buttons:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Buttons/playButton:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Buttons/Controls:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Buttons/Lore:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Buttons/Objectives:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Controls Screen:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Lore Screen:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Objective Screen:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Exit:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_vney5"]
resource_name = "LoreScreen"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Exit:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Exit:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Lore Screen:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_2bvx6"]
resource_name = "MainScreen"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Buttons:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Buttons/playButton:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Buttons/Controls:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Buttons/Lore:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Buttons/Objectives:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_m70q0"]
resource_name = "ObjectiveScreen"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Exit:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Exit:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Objective Screen:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qnvg4"]
_data = {
"ControlScreen": SubResource("Animation_v4w5m"),
"HideAll": SubResource("Animation_ha3ff"),
"LoreScreen": SubResource("Animation_vney5"),
"MainScreen": SubResource("Animation_2bvx6"),
"ObjectiveScreen": SubResource("Animation_m70q0")
}

[node name="Menu" type="Node2D"]
script = ExtResource("1_e646e")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -106)
texture = ExtResource("1_f684u")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(1.3, 1.3)

[node name="Label" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -403.0
offset_top = -217.0
offset_right = 750.0
offset_bottom = -79.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.7, 0.7)
theme_override_colors/font_color = Color(0.840867, 0, 0.170182, 1)
theme_override_fonts/font = ExtResource("2_u1yjf")
theme_override_font_sizes/font_size = 100
text = "Maze of the Silver Sentinel"
horizontal_alignment = 1

[node name="Buttons" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = -403.0
offset_top = -211.0
offset_right = -363.0
offset_bottom = -171.0

[node name="playButton" type="Button" parent="Buttons"]
layout_mode = 0
offset_left = 299.0
offset_top = 124.0
offset_right = 507.0
offset_bottom = 192.0
theme_override_fonts/font = ExtResource("3_1bycy")
theme_override_font_sizes/font_size = 64
disabled = true
text = "Start"

[node name="Controls" type="Button" parent="Buttons"]
layout_mode = 0
offset_left = 239.0
offset_top = 206.0
offset_right = 567.0
offset_bottom = 274.0
theme_override_fonts/font = ExtResource("3_1bycy")
theme_override_font_sizes/font_size = 64
disabled = true
text = "Controls"

[node name="Lore" type="Button" parent="Buttons"]
layout_mode = 0
offset_left = 319.0
offset_top = 288.0
offset_right = 487.0
offset_bottom = 356.0
theme_override_fonts/font = ExtResource("3_1bycy")
theme_override_font_sizes/font_size = 64
disabled = true
text = "Lore"

[node name="Objectives" type="Button" parent="Buttons"]
layout_mode = 0
offset_left = 199.0
offset_top = 370.0
offset_right = 607.0
offset_bottom = 438.0
theme_override_fonts/font = ExtResource("3_1bycy")
theme_override_font_sizes/font_size = 64
disabled = true
text = "Objectives"

[node name="Controls Screen" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -403.0
offset_top = -217.0
offset_right = -363.0
offset_bottom = -177.0

[node name="Label" type="Label" parent="Controls Screen"]
layout_mode = 0
offset_left = 92.0
offset_top = 157.0
offset_right = 716.0
offset_bottom = 376.0
theme_override_fonts/font = ExtResource("2_u1yjf")
theme_override_font_sizes/font_size = 24
text = "- Use WASD or Arrow Keys to move
- Left Click to Swing Sword
-Right Click to Lauch a Shockwave
-Hold Q to Charge Up A Blast, Charge for too long and it'll explode by itself
-Shift is Dash
-Tab opens your inventory"
autowrap_mode = 3

[node name="Lore Screen" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = -311.0
offset_top = -14.0
offset_right = -271.0
offset_bottom = 26.0

[node name="Label" type="Label" parent="Lore Screen"]
layout_mode = 0
offset_left = -1.0
offset_top = -57.0
offset_right = 623.0
offset_bottom = 236.0
theme_override_fonts/font = ExtResource("2_u1yjf")
theme_override_font_sizes/font_size = 24
text = "You are a powerful knight, who has won many battles for your kingdom. After watching you in action, your commander grew worried that you would overthrow him, so he exiled you to an island filled with monsters. You will have to brave the many evils of the island to be free, but you are determined to escape in order to aid your kingdom… and get revenge on those who wronged you. 
"
autowrap_mode = 3

[node name="Objective Screen" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="Objective Screen"]
layout_mode = 0
offset_left = -312.0
offset_top = -63.0
offset_right = 312.0
offset_bottom = 230.0
theme_override_fonts/font = ExtResource("2_u1yjf")
theme_override_font_sizes/font_size = 24
text = "You start on an island, and will have to explore the island to find 10 coins. Once you get 10 coins, you can go through the portal at the bottom of the map. You then must get an additional 10 coins from the labyrinth. Once you do this you can go through the portal hidden in the labyrinth and escape.
"
autowrap_mode = 3

[node name="Exit" type="Button" parent="."]
offset_left = -62.0
offset_top = 202.0
offset_right = 62.0
offset_bottom = 240.0
theme_override_fonts/font = ExtResource("3_1bycy")
theme_override_font_sizes/font_size = 32
text = "Back
"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_qnvg4")
}
autoplay = "HideAll"

[connection signal="pressed" from="Buttons/playButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="Buttons/Controls" to="." method="_on_controls_pressed"]
[connection signal="pressed" from="Buttons/Lore" to="." method="_on_lore_pressed"]
[connection signal="pressed" from="Buttons/Objectives" to="." method="_on_objectives_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_exit_pressed"]
